# Python-homework-10

./: README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 1338570d0d19_auto.py  14a04daeb2f9_auto.py  48ecb1e0a38a_auto.py  9677adb6a25b_auto.py  aa62f5029ddc_create_initial_tables.py  af2a0df5df44_initial_tables.py
scripts/: alembic_rev_gen_and_up.cmd  alembic_rev_gen_and_up.sh
src/: main.py
src/app/: cache.py  database.py
src/app/client/: __init__.py  client.py
src/app/core/: config.py
src/app/crud/: sairport.py  sbook.py  scustom.py  sflight.py
src/app/db/: __init__.py  cache.py  engine.py
src/app/db/models/: sairport.py  sbook.py  scarr.py  scustom.py  sflight.py  spfli.py
src/app/generators/: generate_data.py  sairport.py  sbook.py  scarr.py  scustom.py  sflight.py  spfli.py
src/app/models/: scarr.py
src/app/repositories/: base.py  sairport.py  sbook.py  scarr.py  scustom.py  sflight.py  spfli.py
src/app/services/: sbook.py  scustom.py  sflight.py
